--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "simple-react-form": "1.9.0",
     "simple-react-form-material-ui": "^1.7.13",
     "store": "^2.0.4",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "youtube-thumbnail": "^1.3.0"
   },
   "scripts": {
     "start": "concurrently \"sass --watch src\"  \"react-scripts start\"",
@@ -95,12 +96,9 @@
     "archivestage": "zip -r archive/stage-$(date -u +%FT%TZ) build",
     "deployprod": "surge -p build -d https://participedia.xyz",
     "deploystage": "surge -p build -d https://ppedia.surge.sh",
-    "buildprod":
-      "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
-    "buildstage":
-      "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
-    "builddev":
-      "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt",
+    "buildprod": "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
+    "buildstage": "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
+    "builddev": "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt",
     "rollbackto": "f(){ rm -rf build && unzip archive/${1}; }; f",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint \"src/**/**.js\"",
@@ -111,7 +109,10 @@
     "build-storybook": "build-storybook -s public"
   },
   "lint-staged": {
-    "*.js": ["prettier --write", "git add"]
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "pre-commit": "lint-staged"
 }
