--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.2.1",
     "habitat": "^3.1.2",
+    "history": "^4.7.2",
     "html-to-draftjs": "^1.0.1",
     "html-to-text": "^3.3.0",
     "isomorphic-fetch": "^2.2.1",
@@ -76,6 +77,7 @@
     "react-geosuggest": "^2.2.0",
     "react-image-gallery": "^0.8.2",
     "react-intl": "^2.3.0",
+    "react-joyride": "^1.10.1",
     "react-mapbox-gl": "^1.12.0",
     "react-onscroll": "^1.0.4",
     "react-player": "^0.20.0",
