--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "bootstrap": "^4.0.0-beta",
     "concurrently": "^3.4.0",
     "create-react-class": "^15.6.0",
+    "draft-js": "^0.10.3",
+    "draftjs-to-html": "^0.7.6",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.2.1",
     "habitat": "^3.1.2",
+    "html-to-draftjs": "^1.0.1",
     "html-to-text": "^3.3.0",
     "isomorphic-fetch": "^2.2.1",
     "jest-cli": "^20.0.4",
@@ -66,6 +69,7 @@
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.6.1",
     "react-dom-factories": "^1.0.1",
+    "react-draft-wysiwyg": "^1.10.12",
     "react-dropzone": "^3.13.2",
     "react-form": "^1.2.8",
     "react-geosuggest": "^2.2.0",
@@ -75,7 +79,6 @@
     "react-onscroll": "^1.0.4",
     "react-player": "^0.20.0",
     "react-prevent-default": "^1.0.0",
-    "react-quill": "^1.0.0-beta-1",
     "react-responsive": "^1.3.0",
     "react-router": "^4.1.1",
     "react-share": "^1.14.1",
