--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-responsive": "^1.3.0",
     "react-router": "^4.1.1",
     "react-share": "^1.14.1",
+    "react-sortable-hoc": "^0.6.8",
     "react-tap-event-plugin": "^2.0.1",
     "react-timeago": "3.4.3",
     "react-transition-group": "^1.2.0",
