--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-to-text": "^3.3.0",
     "isomorphic-fetch": "^2.2.1",
     "jest-cli": "^20.0.4",
+    "js-file-download": "^0.4.1",
     "jwt-decode": "^2.1.0",
     "line-by-line": "^0.1.5",
     "mapbox-gl": "^0.38.0",
@@ -82,6 +83,7 @@
     "react-prevent-default": "^1.0.0",
     "react-responsive": "^1.3.0",
     "react-router": "^4.1.1",
+    "react-select": "^1.1.0",
     "react-share": "^1.14.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-timeago": "3.4.3",
