--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-prevent-default": "^1.0.0",
     "react-responsive": "^1.3.0",
     "react-router": "^4.1.1",
+    "react-select": "^1.1.0",
     "react-share": "^1.14.1",
     "react-sortable-hoc": "^0.6.8",
     "react-tap-event-plugin": "^2.0.1",
