--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mapbox-gl": "^0.38.0",
     "material-ui": "^0.18.3",
     "material-ui-chip-input": "^0.16.0",
+    "npm": "^6.0.1",
     "object-omit": "^1.0.0",
     "parse-dms": "^0.0.3",
     "prettier": "^1.7.0",
@@ -102,11 +103,16 @@
     "archivestage": "zip -r archive/stage-$(date -u +%FT%TZ) build",
     "deployprod": "surge -p build -d https://participedia.xyz",
     "deploystage": "surge -p build -d https://ppedia.surge.sh",
-    "buildprod": "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
-    "buildstage": "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
-    "builddev": "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt",
-    "buildallprod": "npm install && sass --update --force src && npm run buildprod && npm test",
-    "buildallstage": "npm install && sass --update --force src && npm run buildstage && npm test",
+    "buildprod":
+      "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
+    "buildstage":
+      "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
+    "builddev":
+      "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt",
+    "buildallprod":
+      "npm install && sass --update --force src && npm run buildprod && npm test",
+    "buildallstage":
+      "npm install && sass --update --force src && npm run buildstage && npm test",
     "rollbackto": "f(){ rm -rf build && unzip archive/${1}; }; f",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint \"src/**/**.js\"",
@@ -117,10 +123,7 @@
     "build-storybook": "build-storybook -s public"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.js": ["prettier --write", "git add"]
   },
   "pre-commit": "lint-staged"
 }
